--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXTAUTH_URL=http://192.168.102.18:3000/components/users/signIn
+NEXTAUTH_URL=https://attendance2-dtjy7c1pz-winstonmeq.vercel.app/components/users/signIn
