--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXTAUTH_URL=https://attendance2-apkqba08e-winstonmeq.vercel.app/components/users/signIn
+NEXTAUTH_URL="https://attendance2-apkqba08e-winstonmeq.vercel.app/components/users/signIn"
+NEXTAUTH_SECRET= "v7COYqKpEdnCbd5aISAw9BxjupOLKYCgBVZ2kwusMNs="
