--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-NEXTAUTH_URL=https://attendance2-flame.vercel.app/components/users/signIn
-NEXTAUTH_SECRET= v7COYqKpEdnCbd5aISAw9BxjupOLKYCgBVZ2kwusMNs=
+# NEXTAUTH_URL=https://attendance2-flame.vercel.app
+# # NEXTAUTH_URL = http://192.168.102.17:3000
+
+# NEXTAUTH_SECRET= v7COYqKpEdnCbd5aISAw9BxjupOLKYCgBVZ2kwusMNs=
+
