--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.10",
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -17,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "framer-motion": "^5.6.0",
     "google-map-react": "^2.2.0",
+    "moment": "^2.29.4",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "multer": "^1.4.5-lts.1",
@@ -27,6 +29,7 @@
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4"
   },
